kubernetes_fundamentals_for_developers/01_configmaps/k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: default
  name: my-app
  labels:
    app: my-app
spec:
  terminationGracePeriodSeconds: 0
  containers:
    - name: my-app
      image: quay.io/kubermatic-labs/kad-training:1.0.0
      ports:
        - containerPort: 8080
      imagePullPolicy: Always
      volumeMounts:
        - name: my-volume
          mountPath: /app/conf/
  volumes:
    - name: my-volume
      configMap:
        name: my-configmap

# TODO resource requests and limits everywhere, keep it consistant, format
