kubernetes_fundamentals_for_developers/01_configmaps/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: my-app
spec:
  type: ClusterIP
  selector:
    app: my-app
  ports:
    - port: 8080
